// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button onClick works 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiLoadingButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-18wz6ak-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
    id=":r1:"
    tabindex="0"
    type="button"
  >
    Click Me
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`renders Button with text 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiLoadingButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-18wz6ak-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
    id=":r0:"
    tabindex="0"
    type="button"
  >
    Test Button
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;
